--- a/phone-specs/oneplus 3.html
+++ b/phone-specs/oneplus 3.html
@@ -6,9 +6,8 @@
   <link rel="stylesheet" type="text/css" href="../css/index.css">
   <link rel="stylesheet" type="text/css" href="../css/navbar.css">
   <link rel="stylesheet" type="text/css" href="css/table.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="scripts/jquery-3.1.1.min.js"></script>
   <script src="scripts/gallery.js"></script>
-
 </head>
 <body>
 
