Add fav phone script

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/navbar.css">
   <link rel="stylesheet" type="text/css" href="css/animation.css">
+  <script src="scripts/jquery-3.1.1.min.js"></script>
+  <script src="scripts/fav_phone.js"></script>
 </head>
 <body>
 
@@ -41,8 +43,9 @@
       PhoneHunt is a small website that presents phone's specifications, notifies you of the latets trends in tech
       and reviews the phones so you can know what to buy.
     </p>
-      Website created in 2016, by Ovidiu Giorgi.
+    Want to know what's our favourite phone?
     </p>
+    <p><button>Click here</button></p>
 
   <div class="animation">
     <img src="img/rifle.png">
